[gd_scene load_steps=4 format=3 uid="uid://moix13pr35jw"]

[ext_resource type="Texture2D" uid="uid://d0jhyd8l7uyfq" path="res://icon.svg" id="1_ejasr"]
[ext_resource type="Script" path="res://src/main/scene/level/test_world.gd" id="1_j2lgi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qdyle"]
size = Vector2(126, 126)

[node name="TestWorld" type="Node2D"]
script = ExtResource("1_j2lgi")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(420, 260)

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("1_ejasr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_qdyle")

[node name="TestUI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="TestUI"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 30

[node name="Button" type="Button" parent="TestUI/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "返回主界面"

[node name="Button2" type="Button" parent="TestUI/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
text = "保存游戏"

[connection signal="pressed" from="TestUI/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TestUI/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
